Fixed Overflow-Y

--- a/style.scss
+++ b/style.scss
@@ -1624,6 +1624,7 @@ form {
       white-space: nowrap;
       padding-bottom: 16px;
       overflow-x: auto;
+      overflow-y: hidden;
       img {
         height: 100%;
         margin-left: 7px;
